--- a/apps/fe/package.json
+++ b/apps/fe/package.json
@@ -13,10 +13,15 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.6",
+    "@radix-ui/react-primitive": "^2.1.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@repo/ui": "workspace:*",
+    "@tailwindcss/typography": "^0.5.16",
+    "clsx": "^2.1.1",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -26,6 +31,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=22"
   }
 }
