--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "validate-engines": "node scripts/validate-engines.js",
+    "preinstall": "node scripts/validate-engines.js"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
     "turbo": "^2.5.5",
     "typescript": "5.8.3"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@>=10",
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
+  },
+  "dependencies": {
+    "semver": "^7.7.2"
   }
 }
