--- a/apps/fe/package.json
+++ b/apps/fe/package.json
@@ -18,6 +18,7 @@
     "@repo/ui": "workspace:*",
     "@tailwindcss/typography": "^0.5.16",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
