--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "turbo": "^2.5.5",
     "typescript": "5.8.3"
   },
-  "packageManager": "pnpm@>=10",
+  "packageManager": "pnpm@10.0.0",
   "engines": {
     "node": ">=22"
   },
