--- a/apps/fe/package.json
+++ b/apps/fe/package.json
@@ -11,17 +11,22 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/mdx": "^3.1.1",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.6",
     "@radix-ui/react-primitive": "^2.1.3",
     "@radix-ui/react-slot": "^1.2.3",
     "@repo/ui": "workspace:*",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/highlight.js": "^10.1.0",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
